--- a/src/Xels.Bitcoin/Properties/Resources.resx
+++ b/src/Xels.Bitcoin/Properties/Resources.resx
@@ -120,50 +120,53 @@
   <data name="AsciiLogo" xml:space="preserve">
     <value>
 
-     .d8888b. 88888888888 8888888b.         d8888 88888888888 8888888  .d8888b. 
-    d88P  Y88b    888     888   Y88b       d88888     888       888   d88P  Y88b
-    Y88b.         888     888    888      d88P888     888       888   Y88b.     
-     "Y888b.      888     888   d88P     d88P 888     888       888    "Y888b.  
-        "Y88b.    888     8888888P"     d88P  888     888       888       "Y88b.
-          "888    888     888 T88b     d88P   888     888       888         "888
-    Y88b  d88P    888     888  T88b   d8888888888     888       888   Y88b  d88P
-     "Y8888P"     888     888   T88b d88P     888     888     8888888  "Y8888P" 
+                 
+ooooooo  ooooo oooooooooooo ooooo         .oooooo..o   
+ `8888    d8'  `888'     `8 `888'        d8P'    `Y8   
+   Y888..8P     888          888         Y88bo.        
+    `8888'      888oooo8     888          `"Y8888o.    
+   .8PY888.     888    "     888              `"Y88b   
+  d8'  `888b    888       o  888       o oo     .d8P   
+o888o  o88888o o888ooooood8 o888ooooood8 8""88888P'    
+                                                                                                                                                                                      
 
-················································································
-················································································
-······································STRAT·····································
-···································XelsSTRAT·································
-·······························XelsS····Xels······························
-····························Xels···········XelsS··························
-·························Xels··················Xels·······················
-·····················XelsS························XelsS···················
-··················Xels································Xels················
-···············Xels······································Xels·············
-···········Xels··············································Xels·········
-········Xels····················································XelsS·····
-····XelsS···························································Xels··
-··Xels································································STRAT··
-··XelsST··························································XelsS···
-··STRA··Xels···················································Xels·······
-··STRA·····XelsS············································Xels··········
-··STRA·········Xels·····································Xels··············
-··STRATI··········XelsS······························Xels··········STRAT··
-····Xels···········Xels·······················Xels··········XelsST··
-·······XelsS··········XelsS················Xels·········XelsS··STR··
-···········Xels···········Xels·········XelsT·········XelsT·····STR··
-·····S········Xels···········Xels··XelsS··········Xels········STRA··
-····Xels·······Xels···········XelsST··········XelsS·········STRATI··
-······Xels········Xels···········STR··········Xels·········Xels·····
-·········XelsS········Xels················XelsS·········Xels········
-·············Xels········Xels··········Xels·········Xels············
-················Xels·········Xels··XelsS·········Xels···············
-···················XelsS········XelsSTR·········XelsS··················
-·······················Xels········STRA·········Xels······················
-··························XelsS·············XelsS·························
-······························Xels·······Xels·····························
-·································XelsXelsS································
-·····································Xels····································
-················································································
+ oooooooooo.                                                 .                      oooo   o8o                             .o8 
+ `888'   `Y8b                                              .o8                      `888   `"'                            "888 
+  888      888  .ooooo.   .ooooo.   .ooooo.  ooo. .oo.   .o888oo oooo d8b  .oooo.    888  oooo    oooooooo  .ooooo.   .oooo888 
+  888      888 d88' `88b d88' `"Y8 d88' `88b `888P"Y88b    888   `888""8P `P  )88b   888  `888   d'""7d8P  d88' `88b d88' `888 
+  888      888 888ooo888 888       888ooo888  888   888    888    888      .oP"888   888   888     .d8P'   888ooo888 888   888 
+  888     d88' 888    .o 888   .o8 888    .o  888   888    888 .  888     d8(  888   888   888   .d8P'  .P 888    .o 888   888 
+ o888bood8P'   `Y8bod8P' `Y8bod8P' `Y8bod8P' o888o o888o   "888" d888b    `Y888""8o o888o o888o d8888888P  `Y8bod8P' `Y8bod88P"
+
+                                                                                                                                                                                     
+oooooooooooo                     oooo                        o8o                      oooo    
+`888'     `8                     `888                        `"'                      `888    
+ 888          .ooooo.   .ooooo.   888   .ooooo.   .oooooooo oooo   .ooooo.   .oooo.    888    
+ 888oooo8    d88' `"Y8 d88' `88b  888  d88' `88b 888' `88b  `888  d88' `"Y8 `P  )88b   888    
+ 888    "    888       888   888  888  888   888 888   888   888  888        .oP"888   888    
+ 888       o 888   .o8 888   888  888  888   888 `88bod8P'   888  888   .o8 d8(  888   888    
+o888ooooood8 `Y8bod8P' `Y8bod8P' o888o `Y8bod8P' `8oooooo.  o888o `Y8bod8P' `Y888""8o o888o   
+                                                 d"     YD                                    
+                                                 "Y88888P'                                    
+
+ oooooooooooo                                                                           
+ `888'     `8                                                                           
+  888          .ooooo.   .ooooo.  ooo. .oo.    .ooooo.  ooo. .oo.  .oo.   oooo    ooo   
+  888oooo8    d88' `"Y8 d88' `88b `888P"Y88b  d88' `88b `888P"Y88bP"Y88b   `88.  .8'    
+  888    "    888       888   888  888   888  888   888  888   888   888    `88..8'     
+  888       o 888   .o8 888   888  888   888  888   888  888   888   888     `888'      
+ o888ooooood8 `Y8bod8P' `Y8bod8P' o888o o888o `Y8bod8P' o888o o888o o888o     .8'       
+                                                                          .o..P'        
+                                                                          `Y8P'         
+
+ooooooooo.   oooo                .    .o88o.                                                                                                                                          
+`888   `Y88. `888              .o8    888 `"                                                                                                                                          
+ 888   .d88'  888   .oooo.   .o888oo o888oo   .ooooo.  oooo d8b ooo. .oo.  .oo.                                                                                                       
+ 888ooo88P'   888  `P  )88b    888    888    d88' `88b `888""8P `888P"Y88bP"Y88b                                                                                                      
+ 888          888   .oP"888    888    888    888   888  888      888   888   888                                                                                                      
+ 888          888  d8(  888    888 .  888    888   888  888      888   888   888                                                                                                      
+o888o        o888o `Y888""8o   "888" o888o   `Y8bod8P' d888b    o888o o888o o888o                  
+                               
 
 
 </value>
